# clientes-cuentas-microservicio-domain/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/domain/port/out/CuentaBancariaCommandRepository.java
@@ -1,0 +1,13 @@
+package org.javierGomez18.clientes.cuentas.microservicio.domain.port.out;
+
+import org.javierGomez18.clientes.cuentas.microservicio.domain.model.Cliente;
+import org.javierGomez18.clientes.cuentas.microservicio.domain.model.CuentaBancaria;
+
+/**
+ * Puerto de salida: Repositorio de comandos de cuentas
+ */
+public interface CuentaBancariaCommandRepository {
+    void addCuenta(Cliente cliente, CuentaBancaria cuenta);
+    void updateCuenta(CuentaBancaria cuenta);
+}
+
