# clientes-cuentas-microservicio-infrastructure/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/infrastructure/persistence/repository/CuentaBancariaJpaRepository.java
@@ -1,0 +1,16 @@
+package org.javierGomez18.clientes.cuentas.microservicio.infrastructure.persistence.repository;
+
+import org.javierGomez18.clientes.cuentas.microservicio.infrastructure.persistence.entity.CuentaBancariaEntity;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.List;
+
+/**
+ * Repositorio JPA: Cuenta Bancaria
+ */
+@Repository
+public interface CuentaBancariaJpaRepository extends JpaRepository<CuentaBancariaEntity, Long> {
+    List<CuentaBancariaEntity> findByClienteDni(String dniCliente);
+}
+
